2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Bump MD version.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Track changes in the Icon extension node.

2007-10-25  Lluis Sanchez Gual <lluis@novell.com> 

	* icons/Java.File.EmptyFile, icons/Java.File.Form, icons/Java.File.FullFile,
	  icons/Java.File.NewClass, icons/Java.File.WebFile, JavaBinding.mdp,
	  Makefile.am, templates/EmptyJavaFile.xft.xml,
	  templates/JavaApplet.xft.xml, templates/JavaApplication.xft.xml,
	  templates/JavaDialog.xft.xml, templates/JavaFrame.xft.xml,
	  templates/JavaOKDialog.xft.xml, templates/JavaPanel.xft.xml: Use tango
	  file icons. Removed obsolete icons.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp, templates/IkvmGnomeApplicationProject.xpt.xml,
	  templates/IkvmGladeApplicationProject.xpt.xml,
	  templates/JavaConsoleApplicationProject.xpt.xml,
	  templates/IkvmLibraryProject.xpt.xml,
	  templates/EmptyJavaProject.xpt.xml,
	  templates/IkvmGtkApplicationProject.xpt.xml,
	  templates/JavaApplicationProject.xpt.xml,
	  templates/IkvmConsoleApplicationProject.xpt.xml, Makefile.am,
	  icons/Java.Project.Form, icons/Java.Project.Library,
	  icons/Java.Project.WebProject, icons/Java.ProjectIcon,
	  icons/Java.Project.DOSProject, icons/Java.Project.UserControl,
	  icons/Java.Project.EmptyProject, icons/Java.Project.ServiceProject,
	  icons/java-icon-32.png, icons/Java.Project.FullProject: Updated project
	  icons. Use the base project icon with an overlay to show the type.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp: Project file names updated by change in MD path
	  functions.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Added an Other section in the MD property dialog
	  and moved some options there to avoid too many branches.
