@@ -34,11 +34,11 @@
     <File name="Gui/ProjectConfigurationPropertyPanel.cs" subtype="Code" buildaction="Compile" />
     <File name="Gui/GlobalOptionsPanel.cs" subtype="Code" buildaction="Compile" />
     <File name="Project/JavaCompilerParameters.cs" subtype="Code" buildaction="Compile" />
-    <File name="JavaBindingCompilerServices.cs" subtype="Code" buildaction="Compile" />
     <File name="JavaCompiler.cs" subtype="Code" buildaction="Compile" />
     <File name="JavaLanguageBinding.cs" subtype="Code" buildaction="Compile" />
     <File name="JavaBinding.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="icons/java-icon-32.png" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="IKVMCompilerManager.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="gnome-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
